tests/NormalTests/paczka1/small_fuzzy/88049935.err
Error in line 1: pVy4oXU5S S869 8,7
Error in line 3: tlQEYlzbYzL S806 82,4
Error in line 13: S806 S806 "0,5
